<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/textcolor"
            android:gravity="center"
            android:text="@string/student_sign_up"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/firstname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_action_fullname"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/textcolor"/>

        <EditText
            android:id="@+id/lastname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_action_roll"
            android:inputType="text"
            android:hint="@string/roll"/>

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_action_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_action_pass"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/branch_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_action_branch"
            android:hint="@string/branch"/>

        <EditText
            android:id="@+id/guide_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_action_guide"
            android:inputType="textPersonName"
            android:hint="@string/guide"/>

        <EditText
            android:id="@+id/phone_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_action_phone"
            android:inputType="phone"
            android:hint="@string/phone"/>


        <Button
            android:id="@+id/student_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:text="@string/register"/>

    </LinearLayout>

</ScrollView>
